# dragon3d

./: Manifest  NOTICE  RendermanXML.1  RendermanXML.java  build-dependencies.xml  build-jaxb.xml  build.properties  build.xml  checkstyle-suppression.xml  checkstyle.xml  pom.xml
c++/: .gitignore  CMakeLists.txt
c++/Dragon3D/: .sconsign.dblite  SConscript  SConstruct  drinktea.cpp  drinktea.h
c++/Dragon3D/Dragon3D.xcodeproj/: cyberroadie.mode1v3  cyberroadie.pbxuser  project.pbxproj
c++/cmake/: utils.cmake
c++/demo/: CMakeLists.txt  dragon3d.cpp
c++/include/dragon3d/: rib.h
c++/src/: CMakeLists.txt  rib.cpp
c++/test/: testtest.cc  testtest.cpp
conf/: dragon3d.xml  dragon3d_local.xml  jaxb.properties  log4j.xml
dtd/: xrib.dtd
img/: logodragon3d.xcf
rib/: teapot.rib
rib/xml/: teapot.xml
schemas/: xrib.dtd  xrib.xsd  xrib_teapot.xsd
src/conf/: log4j.xml
src/jaxb/: dragon3d_teapot.xjb
src/main/resources/: RibElements.xml  checkstyle-suppressions.xml  dragon3d_teapot.xjb  ribelement.properties
src/main/xjb/: dragon3d_teapot.xjb
src/main/xsd/: xrib_teapot.xsd
src/net/cyberroadie/dtd/: AttList.java  Attribute.java  Comment.java  DTD.java  Element.java  Entity.java  Node.java  NodeList.java
src/net/transformatorhuis/cgi/: RtArchiveCallback.java  RtBasis.java  RtBoolean.java  RtBound.java  RtColor.java  RtContextHandle.java  RtErrorHandler.java  RtFilterFunc.java  RtFloat.java  RtHPoint.java  RtInt.java  RtLightHandle.java  RtMatrix.java  RtNormal.java  RtObjectHandle.java  RtPoint.java  RtPointer.java  RtProcFreeFunc.java  RtProcSubdivFunc.java  RtString.java  RtToken.java  RtVector.java  RtVoid.java
src/net/transformatorhuis/dtd/: AttList.java  Attribute.java  (+7 more)
src/resources/img/: dragon3d.xcf  logodragon3d.xcf
src/resources/rib/: image.rib  image.tif  shadow.rib  swordMesh.rib  teapot.rib  uberlight.slx
src/site/: site.xml
src/site/apt/: download.apt  index.apt
src/test/templates/: RiRib.vm  default.vm
src/util/: dtd2xsd.pl
web/: about.txt.php  contact.php  contact.txt.php  dragon3d.php  dragon3d.txt.php  footer.php  header.php  index.php  navigation.php  news.php  news.txt.php
web/css/: default.css
(+517 files in other folders)
